portfolio & post css adjustments

--- a/_posts/portfolio/2016-02-11-work1.markdown
+++ b/_posts/portfolio/2016-02-11-work1.markdown
@@ -1,10 +1,9 @@
 ---
 layout: portfolio
-title: test
+title: CMS
 cover: /assets/test.png
-abstract: "I'm a description sample."
+type: "Web Design"
 date:   2015-12-06 14:59:29 +0800
 categories: portfolio
 ---
 
-![123]({{ site.baseurl }}/assets/test.png)
